--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         android:textAlignment="viewEnd"
-        android:textSize="34sp"
+        android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Answer1Check" />
@@ -25,7 +25,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         android:textAlignment="viewEnd"
-        android:textSize="34sp"
+        android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Answer1" />
@@ -37,7 +37,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         android:textAlignment="viewEnd"
-        android:textSize="34sp"
+        android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Answer3" />
@@ -49,7 +49,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         android:textAlignment="viewEnd"
-        android:textSize="34sp"
+        android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Answer2Check" />
@@ -61,7 +61,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         android:textAlignment="viewEnd"
-        android:textSize="34sp"
+        android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Answer2" />
@@ -110,7 +110,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="Guess #1"
-        android:textSize="34sp"
+        android:textSize="30sp"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -122,7 +122,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
         android:text="Guess #1 Check"
-        android:textSize="34sp"
+        android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Guess1" />
@@ -134,7 +134,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
         android:text="Guess #2"
-        android:textSize="34sp"
+        android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Guess1Check" />
@@ -146,7 +146,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
         android:text="Guess #2 Check"
-        android:textSize="34sp"
+        android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Guess2" />
@@ -158,7 +158,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
         android:text="Guess #3"
-        android:textSize="34sp"
+        android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Guess2Check" />
@@ -170,7 +170,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
         android:text="Guess #3 Check"
-        android:textSize="34sp"
+        android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Guess3" />
@@ -182,7 +182,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:textAlignment="viewEnd"
-        android:textSize="34sp"
+        android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -191,14 +191,15 @@
         android:id="@+id/CorrectGuess"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="128dp"
         android:text="TEXT"
         android:textAlignment="center"
         android:textSize="60sp"
         android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/GuessField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Guess3Check" />
+        app:layout_constraintTop_toBottomOf="@+id/Guess3Check"
+        app:layout_constraintVertical_bias="0.512" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
